# SimAEN

./: README.md  docker-compose.yml
Simaen-Model/: README.md  parameter_name_mapping.txt  setup.cfg
Simaen-Model/src/: WorkflowModel.py  config.txt  generate_simaen_config.py  mapper.sh  multiConfig.py  readConfig.py  simaen_run.py  simaen_run_grid.py  webUIprocess.py
simaen-api/: Dockerfile  Jenkinsfile  LICENSE  README.md  insert_runs.py  requirements.txt  schema.sql  setup.py  setup.sh
simaen-api/simaen_api/: __init__.py  __main__.py  configurations.py  postgres.json  simaen_api.py
simaen-api/simaen_api/api/: __init__.py  data_interface.py  endpoints.py
simaen-db/: postgres.json
simaen-web/: .env  Dockerfile  Jenkinsfile  README.md  ssl.conf
simaen-web/public/: index.html
simaen-web/simaen-web/: Dockerfile  package-lock.json  package.json
simaen-web/simaen-web/public/: manifest.json
simaen-web/simaen-web/src/: App.tsx  Header.tsx  api.tsx  index.css  index.tsx  models.tsx  reportWebVitals.js  setupTests.js
simaen-web/simaen-web/src/components/: CsvData.tsx  FixedParamsPanel.tsx
simaen-web/simaen-web/src/context/: ComparisonProvider.tsx
simaen-web/simaen-web/src/pages/: About.tsx  Compare.tsx  Glossary.tsx  ModelDetails.tsx
simaen-web/src/: App.css  App.tsx  Footer.tsx  colors.tsx  constants.tsx  react-app-env.d.ts  references.tsx
simaen-web/src/components/: LabeledBar.tsx  StackedBar.tsx  TabPanel.tsx
simaen-web/src/components/Compare/: Form.tsx
simaen-web/src/pages/: About.tsx  FAQ.tsx  ModelDetails.tsx  SetRunModel.tsx
(+7 files in other folders)
