[metadata]
name = simAEN
version = 0.1.0
author = MIT - LL
author_email = simaen@ll.mit.edu
description = Simulation framework for automated exposure notification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mit-ll/SimAEN
project_urls =
    Bug Tracker = https://github.com/mit-ll/SimAEN/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src